# benchmark-lab

./: README.md  cli-ex.txt  pyproject.toml  run.py
src/controller/: benchmark_controller.py
src/datastrutures/: linked_list.py  python_list.py
src/interfaces/: generic_list.py
src/utils/: timer.py
